docs/api/qiskit/0.45/qiskit.circuit.library.RZXGate.mdx
---
title: RZXGate
description: API reference for qiskit.circuit.library.RZXGate
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.RZXGate
---

# RZXGate

<Class id="qiskit.circuit.library.RZXGate" github="https://github.com/qiskit/qiskit/tree/stable/0.45/qiskit/circuit/library/standard_gates/rzx.py" signature="qiskit.circuit.library.RZXGate(theta, label=None, *, duration=None, unit='dt')">
  Bases: [`Gate`](qiskit.circuit.Gate "qiskit.circuit.gate.Gate")

  A parametric 2-qubit $Z \otimes X$ interaction (rotation about ZX).

  This gate is maximally entangling at $\theta = \pi/2$.

  The cross-resonance gate (CR) for superconducting qubits implements a ZX interaction (however other terms are also present in an experiment).

  Can be applied to a [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") with the [`rzx()`](qiskit.circuit.QuantumCircuit#rzx "qiskit.circuit.QuantumCircuit.rzx") method.

  **Circuit Symbol:**

  ```python
       ┌─────────┐
  q_0: ┤0        ├
       │  Rzx(θ) │
  q_1: ┤1        ├
       └─────────┘
  ```

  **Matrix Representation:**

  $$
  \newcommand{\rotationangle}{\frac{\theta}{2}}

  R_{ZX}(\theta)\ q_0, q_1 = \exp\left(-i \frac{\theta}{2} X{\otimes}Z\right) =
      \begin{pmatrix}
          \cos\left(\rotationangle\right) & 0 & -i\sin\left(\rotationangle\right) & 0 \\
          0 & \cos\left(\rotationangle\right) & 0 & i\sin\left(\rotationangle\right) \\
          -i\sin\left(\rotationangle\right) & 0 & \cos\left(\rotationangle\right) & 0 \\
          0 & i\sin\left(\rotationangle\right) & 0 & \cos\left(\rotationangle\right)
      \end{pmatrix}
  $$

  <Admonition title="Note" type="note">
    In Qiskit’s convention, higher qubit indices are more significant (little endian convention). In the above example we apply the gate on (q\_0, q\_1) which results in the $X \otimes Z$ tensor order. Instead, if we apply it on (q\_1, q\_0), the matrix will be $Z \otimes X$:

    ```python
         ┌─────────┐
    q_0: ┤1        ├
         │  Rzx(θ) │
    q_1: ┤0        ├
         └─────────┘
    ```

    $$
    \newcommand{\rotationangle}{\frac{\theta}{2}}

    R_{ZX}(\theta)\ q_1, q_0 = exp(-i \frac{\theta}{2} Z{\otimes}X) =
        \begin{pmatrix}
            \cos(\rotationangle)   & -i\sin(\rotationangle) & 0           & 0          \\
            -i\sin(\rotationangle) & \cos(\rotationangle)   & 0           & 0          \\
            0           & 0           & \cos(\rotationangle)   & i\sin(\rotationangle) \\
            0           & 0           & i\sin(\rotationangle)  & \cos(\rotationangle)
        \end{pmatrix}
    $$

    This is a direct sum of RX rotations, so this gate is equivalent to a uniformly controlled (multiplexed) RX gate:

    $$
    R_{ZX}(\theta)\ q_1, q_0 =
        \begin{pmatrix}
            RX(\theta) & 0 \\
            0 & RX(-\theta)
        \end{pmatrix}
    $$
  </Admonition>

  **Examples:**

  > $$
  > R_{ZX}(\theta = 0) = I
  > $$
  >
  > $$
  > R_{ZX}(\theta = 2\pi) = -I
  > $$
  >
  > $$
  > R_{ZX}(\theta = \pi) = -i Z \otimes X
  > $$
  >
  > $$
  > RZX(\theta = \frac{\pi}{2}) = \frac{1}{\sqrt{2}}
  >                         \begin{pmatrix}
  >                             1  & 0 & -i & 0 \\
  >                             0  & 1 & 0  & i \\
  >                             -i & 0 & 1  & 0 \\
  >                             0  & i & 0  & 1
  >                         \end{pmatrix}
  > $$

  Create new RZX gate.

  ## Attributes

  ### base\_class

  <Attribute id="qiskit.circuit.library.RZXGate.base_class" name="base_class">
    Get the base class of this instruction. This is guaranteed to be in the inheritance tree of `self`.

    The “base class” of an instruction is the lowest class in its inheritance tree that the object should be considered entirely compatible with for \_all\_ circuit applications. This typically means that the subclass is defined purely to offer some sort of programmer convenience over the base class, and the base class is the “true” class for a behavioural perspective. In particular, you should *not* override [`base_class`](#qiskit.circuit.library.RZXGate.base_class "qiskit.circuit.library.RZXGate.base_class") if you are defining a custom version of an instruction that will be implemented differently by hardware, such as an alternative measurement strategy, or a version of a parametrised gate with a particular set of parameters for the purposes of distinguishing it in a [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target") from the full parametrised gate.

    This is often exactly equivalent to `type(obj)`, except in the case of singleton instances of standard-library instructions. These singleton instances are special subclasses of their base class, and this property will return that base. For example:

    ```python
    >>> isinstance(XGate(), XGate)
    True
    >>> type(XGate()) is XGate
    False
    >>> XGate().base_class is XGate
    True
    ```

    In general, you should not rely on the precise class of an instruction; within a given circuit, it is expected that `Instruction.name` should be a more suitable discriminator in most situations.
  </Attribute>

  ### condition

  <Attribute id="qiskit.circuit.library.RZXGate.condition" name="condition">
    The classical condition on the instruction.
  </Attribute>

  ### condition\_bits

  <Attribute id="qiskit.circuit.library.RZXGate.condition_bits" name="condition_bits">
    Get Clbits in condition.
  </Attribute>

  ### decompositions

  <Attribute id="qiskit.circuit.library.RZXGate.decompositions" name="decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.library.RZXGate.definition" name="definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.library.RZXGate.duration" name="duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.library.RZXGate.label" name="label">
    Return instruction label
  </Attribute>

  ### mutable

  <Attribute id="qiskit.circuit.library.RZXGate.mutable" name="mutable">
    Is this instance is a mutable unique instance or not.

    If this attribute is `False` the gate instance is a shared singleton and is not mutable.
  </Attribute>

  ### name

  <Attribute id="qiskit.circuit.library.RZXGate.name" name="name">
    Return the name.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.RZXGate.num_clbits" name="num_clbits">
    Return the number of clbits.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.RZXGate.num_qubits" name="num_qubits">
    Return the number of qubits.
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.library.RZXGate.params" name="params">
    return instruction params.
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.library.RZXGate.unit" name="unit">
    Get the time unit of duration.
  </Attribute>

  ## Methods

  ### inverse

  <Function id="qiskit.circuit.library.RZXGate.inverse" name="inverse" signature="inverse()">
    Return inverse RZX gate (i.e. with the negative rotation angle).
  </Function>

  ### power

  <Function id="qiskit.circuit.library.RZXGate.power" name="power" signature="power(exponent)">
    Raise gate to a power.
  </Function>
</Class>

